--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "azu",
   "license": "MIT",
   "scripts": {
-    "test": "textlint",
+    "test": "npm run textlint",
     "textlint": "textlint README.md",
     "textlint:fix": "textlint --fix README.md"
   },
@@ -12,6 +12,7 @@
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-abbr-within-parentheses": "^1.0.2",
     "textlint-rule-common-misspellings": "^1.0.1",
-    "textlint-rule-period-in-list-item": "^0.2.0"
+    "textlint-rule-period-in-list-item": "^0.2.0",
+    "textlint-rule-prh": "^5.0.1"
   }
 }
